// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rebuildSpec > produces a deterministic spec for the full fixture (snapshot) 1`] = `
"# Build Spec

_Generated by the Builder from interview answers._

## 1. Problem and users
- **Pitch**: A study-prep app for medical residents.
- **Expected scale (year 1)**: under 5k in year 1

## 2. Scope

**Top user flows (in priority order):**
- Sign up and choose a board
- Upload past-exam PDFs
- Daily question stack with timer
- Review wrong answers with explanations
- Progress dashboard

**Looks and feels like (reference anchors):**
- Anki: similar spaced-repetition feel, different content (board exam questions, not user-authored cards)
- UWorld: similar question-bank UX, different pricing (subscription vs one-off)

**Explicitly out of scope for v1:**
- no team accounts in v1
- no proctoring/exam mode
- no flashcards

## 3. Core flows + definition of done

**Deliverable artifact (what the end user opens):**

A responsive web app the resident opens in a browser; the home screen shows today's question stack and a Start button.

**Non-negotiables (must not be missing):**

- must run in a browser without install
- must grade answers immediately with explanations
- must persist progress across devices

**Top flow's acceptance criteria:**

Per flow: signup completes within 2 steps; upload PDF parses without manual cleanup; daily question stack always has 20 items; reviews show explanation immediately; dashboard reflects last session within 1 minute.

**Definition of done (v1):**

A new user can sign up, choose their board, upload one PDF that parses cleanly into at least 5 questions, do a 20-question session, and see their score on a dashboard.

## 4. Data model

**Entities the app tracks:**
- users
- board exams
- exam questions
- study sessions

**Key fields per entity:**

- user: email, name, board
- exam: title, board, year
- question: prompt, options, correct_index, explanation
- session: started_at, score, mistakes_count

## 5. Integrations
- Stripe
- Anthropic
- Postmark
- Sentry

## 6. Non-functional requirements
- **Accessibility**: yes, WCAG 2.2 AA
- **Performance targets**: kit defaults
- **Test strategy**: smoke + critical paths
- **Telemetry / privacy**: Sentry opt-in only after first build
- **Cost ceiling**: 5 GBP per build day
- **i18n / locales**: no (en-GB)

## 7. Active kit rules (from decision table)
- **B22** activated by Q6: "yes, nightly spaced-repetition recompute jobs"
- **B23** activated by Q6: "yes, nightly spaced-repetition recompute jobs"
- **B24** activated by Q6: "yes, nightly spaced-repetition recompute jobs"
- **B28** activated by Q8: "yes, users upload PDFs of past exam questions"
- **B3** activated by Q9: "yes"
- **F12** activated by Q14: "yes, WCAG 2.2 AA"
- **F13** activated by Q14: "yes, WCAG 2.2 AA"
- **F14** activated by Q14: "yes, WCAG 2.2 AA"
- **F15** activated by Q14: "yes, WCAG 2.2 AA"
- **F16** activated by Q14: "yes, WCAG 2.2 AA"
- **F17** activated by Q14: "yes, WCAG 2.2 AA"
- **F18** activated by Q14: "yes, WCAG 2.2 AA"
- **O18** activated by Q9: "yes"

## 8. Interview progress
- Fast-path questions answered: **35 / 35**
- All fast-path questions answered. Ready to start build (subject to Echo-back).

---

_35 answers recorded._
"
`;

exports[`rebuildSpec > produces a deterministic spec for the minimal fixture (snapshot) 1`] = `
"# Build Spec

_Generated by the Builder from interview answers._

## 1. Problem and users
- **Pitch**: A platform that helps small charities manage their volunteers.
- **Expected scale (year 1)**: _(not yet answered)_

## 2. Scope

**Top user flows (in priority order):**
- _(not yet answered)_

**Looks and feels like (reference anchors):**
- _(not yet answered)_

**Explicitly out of scope for v1:**
- _(not yet answered)_

## 3. Core flows + definition of done

**Deliverable artifact (what the end user opens):**

_(not yet captured — the build will not have a concrete output target)_

**Non-negotiables (must not be missing):**

- _(not yet answered)_

**Top flow's acceptance criteria:**

_(no acceptance criteria captured yet)_

**Definition of done (v1):**

_(not yet captured)_

## 4. Data model

**Entities the app tracks:**
- _(not yet answered)_

**Key fields per entity:**

- _(not yet answered)_

## 5. Integrations
- _(not yet answered)_

## 6. Non-functional requirements
- **Accessibility**: _(not yet answered)_
- **Performance targets**: _(not yet answered)_
- **Test strategy**: _(not yet answered)_
- **Telemetry / privacy**: _(not yet answered)_
- **Cost ceiling**: _(not yet answered)_
- **i18n / locales**: _(not yet answered)_ (default locale)

## 7. Active kit rules (from decision table)
- _(no rules activated yet)_

## 8. Interview progress
- Fast-path questions answered: **1 / 35**
- Outstanding fast-path questions:
  - Q2 (user accounts)
  - Q3 (payments)
  - Q4 (marketplace)
  - Q5 (ai)
  - Q6 (background jobs)
  - Q7 (webhooks)
  - Q8 (file uploads)
  - Q9 (pii / gdpr)
  - Q10 (auth model)
  - Q11 (scale)
  - Q12 (design)
  - Q13 (platforms)
  - Q14 (accessibility)
  - Q15 (core flows)
  - Q16 (acceptance criteria)
  - Q17 (integrations)
  - Q18 (tenancy)
  - Q19 (pricing)
  - Q20 (stack constraints)
  - Q21 (performance)
  - Q22 (test strategy)
  - Q23 (telemetry)
  - Q24 (cost ceiling)
  - Q25 (build methodology)
  - Q26 (i18n)
  - Q27 (locales)
  - Q28 (destructive actions)
  - Q29 (data entities)
  - Q30 (key fields per entity)
  - Q31 (out of scope)
  - Q32 (definition of done)
  - Q33 (deliverable artifact)
  - Q34 (reference anchors)
  - Q35 (non-negotiables)

---

_1 answers recorded._
"
`;

exports[`rebuildSpec > produces a deterministic spec for the partial fixture (snapshot) 1`] = `
"# Build Spec

_Generated by the Builder from interview answers._

## 1. Problem and users
- **Pitch**: A study-prep app for medical residents preparing for board exams.
- **Expected scale (year 1)**: under-1k for v1 beta

## 2. Scope

**Top user flows (in priority order):**
- _(not yet answered)_

**Looks and feels like (reference anchors):**
- _(not yet answered)_

**Explicitly out of scope for v1:**
- _(not yet answered)_

## 3. Core flows + definition of done

**Deliverable artifact (what the end user opens):**

_(not yet captured — the build will not have a concrete output target)_

**Non-negotiables (must not be missing):**

- _(not yet answered)_

**Top flow's acceptance criteria:**

_(no acceptance criteria captured yet)_

**Definition of done (v1):**

_(not yet captured)_

## 4. Data model

**Entities the app tracks:**
- _(not yet answered)_

**Key fields per entity:**

- _(not yet answered)_

## 5. Integrations
- _(not yet answered)_

## 6. Non-functional requirements
- **Accessibility**: yes
- **Performance targets**: _(not yet answered)_
- **Test strategy**: _(not yet answered)_
- **Telemetry / privacy**: _(not yet answered)_
- **Cost ceiling**: _(not yet answered)_
- **i18n / locales**: _(not yet answered)_ (default locale)

## 7. Active kit rules (from decision table)
- **B3** activated by Q9: "yes"
- **F12** activated by Q14: "yes"
- **F13** activated by Q14: "yes"
- **F14** activated by Q14: "yes"
- **F15** activated by Q14: "yes"
- **F16** activated by Q14: "yes"
- **F17** activated by Q14: "yes"
- **F18** activated by Q14: "yes"
- **O18** activated by Q9: "yes"

## 8. Interview progress
- Fast-path questions answered: **4 / 35**
- Outstanding fast-path questions:
  - Q2 (user accounts)
  - Q3 (payments)
  - Q4 (marketplace)
  - Q5 (ai)
  - Q6 (background jobs)
  - Q7 (webhooks)
  - Q8 (file uploads)
  - Q10 (auth model)
  - Q12 (design)
  - Q13 (platforms)
  - Q15 (core flows)
  - Q16 (acceptance criteria)
  - Q17 (integrations)
  - Q18 (tenancy)
  - Q19 (pricing)
  - Q20 (stack constraints)
  - Q21 (performance)
  - Q22 (test strategy)
  - Q23 (telemetry)
  - Q24 (cost ceiling)
  - Q25 (build methodology)
  - Q26 (i18n)
  - Q27 (locales)
  - Q28 (destructive actions)
  - Q29 (data entities)
  - Q30 (key fields per entity)
  - Q31 (out of scope)
  - Q32 (definition of done)
  - Q33 (deliverable artifact)
  - Q34 (reference anchors)
  - Q35 (non-negotiables)

---

_4 answers recorded._
"
`;
